--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@types/mocha": "^2.2",
     "chai": "^3.5",
     "mocha": "^3.0",
+    "rollup": "^1.1.2",
+    "rollup-plugin-typescript2": "^0.19.2",
     "ts-loader": "^2.0.1",
     "typescript": "^2.2",
     "vue": "^2.2",
