--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "reflect-metadata": "^0.1"
   },
   "peerDependencies": {
-    "vue": "^2.2",
-    "vuex": "^2.2"
+    "vue": ">=2.2",
+    "vuex": ">=2.2"
   }
 }
